Refactoring all pages so that they all use flex except the dashboard which uses bootstrap. Added div sub-content so I can include a header on each page. This also required the moving on second-nav from the nav into the sub-content. Sometimes also need to include a third div with class profile-content to align the content in a column. Also making the first-nav fixed so it does not scroll with the rest of the page. Have to continue this refactor with the remaining pages.

--- a/public/kanbas/css/home.css
+++ b/public/kanbas/css/home.css
@@ -26,10 +26,11 @@ body{
 
 nav{
     display: flex;
-    width: 21%;
+    width: 100px;
     height: 100%;
     justify-content: center;
     align-self: flex-start;
+    position: fixed;
 }
 
 nav i{
@@ -40,7 +41,7 @@ nav i{
     flex: 1 1 0;
     display: flex;
     flex-direction: column;
-    width: 100%;
+    width: 100px;
 }
 
 .nav-one ul{
@@ -65,9 +66,23 @@ nav i{
 }
 
 .second-nav{
-    flex: 2 1 0;
+    margin-top: 35px;
+    /*flex: 2 1 0;*/
     display: flex;
-    justify-content: center;
+    /*justify-content: center;*/
+}
+
+.second-nav ul{
+    list-style: none;
+}
+
+.second-nav li{
+    padding: 7px 10px;
+    margin: 5px 0px;
+}
+.second-nav a{
+    text-decoration: none;
+    color: black;
 }
 
 .front_page{
@@ -83,11 +98,18 @@ nav i{
 
 .content{
     display: flex;
-    flex: 1;
+   /* flex: 1; */
     padding: 10px;
     margin: 10px;
     align-items: center;
     flex-direction: column;
+    width: 100%;
+    margin-left: 110px;
+}
+
+.sub-content{
+    display: flex;
+    width: 100%;
 }
 
 .my_dashboard{
@@ -141,14 +163,14 @@ nav i{
 }
 
 .movedPos{
-    transform: translateX(220px);
+    transform: translateX(300px);
 }
 
-.courses-nav{
+.courses-nav, .account-nav{
     position: fixed;
-    left: -120px;
+    left: -200px;
     transition: 0.3s ease;
-    width: 220px;
+    width: 300px;
     height: 100%;
     background-color: white;
     box-shadow: 5px 0px 10px rgba(0, 0, 0, 0.2);
@@ -156,11 +178,11 @@ nav i{
     z-index: 2;
 }
 
-.courses-nav ul{
+.courses-nav ul, .account-nav ul{
     list-style: none;
 }
 
-.courses-nav li, .courses-nav h2{
+.courses-nav li, .courses-nav h2, .account-nav li, .account-nav h2{
     padding: 7px;
 }
 
@@ -169,7 +191,7 @@ nav i{
     border-bottom: 1px solid gray;
 }
 
-.courses-nav a{
+.courses-nav a, .account-nav a{
     text-decoration: none;
     color: red;
 }
@@ -197,6 +219,7 @@ ul ul li{
 
 aside{
     width: 25%;
+    justify-self: flex-end;
 }
 
 .butts{
@@ -281,18 +304,25 @@ th, td{
    margin: 10px;
 }
 
+/*
 .profile_content{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 10vh 90vh;
+    grid-template-rows: 0.5fr 0.5fr 1fr 1fr;
+}*/
+
+.profile_content{
+    display: flex;
+    flex-direction: column;
+    margin: 20px 40px;
+    flex: 1;
 }
 
-.profile_header{
-    grid-column: 1 / 5;
-    grid-row: 1 / 2;
+.page_header{
     border-bottom: 1px solid gray;
     display: flex;
     align-items: center;
+    width: 100%;
 }
 
 .profile_img{
@@ -301,19 +331,25 @@ th, td{
     border-radius: 50%;
     width: 100px;
     height: 100px;
-    background-color: gray;
-    justify-self: center;
-    margin: 20px 10px;
+    background-color: white;
+    border: 1px solid black;
+    justify-self: flex-start;
+    margin: 20px 10px 0px 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 62px;
 }
 
 .profile_info{
-    grid-column: 2 / 4;
-    grid-row: 2 / 3;
-    margin: 20px 10px;
+    grid-column: 1 / 3;
+    grid-row: 3 / 4;
+    margin: 0px 10px;
+    padding-left: 10px;
 }
 
 .edit_butt{
-    grid-column: 4 / 5;
+    grid-column: 3 / 4;
     grid-row: 2 / 3;
     height: 30px;
     width: 120px;
@@ -418,4 +454,26 @@ th, td{
     font-weight: bold;
     color: red;
     font-size: 14px;
+}
+
+.prof-circle{
+    width: 80px;
+    height: 80px;
+    background-color: white;
+    border-radius: 50%;
+    border: 2px solid gray;
+    color: blue;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+}
+
+.prof-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    border-bottom: 1px solid gray;
+    margin: 5px 0px;
+    padding: 5px 0px;
 }
